[project]
name = "requires-python-minimal-reproduction"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Causey",email = "ryan.causey@munipal.io"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
